re PR c++/59886 (C++ array init optimization results in RANGE_EXPRs in assignments)

PR c++/59886
	PR c++/59659
	* typeck2.c (process_init_constructor_array): Don't create
	RANGE_EXPR yet.

From-SVN: r207051